--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
-    "react-query": "^3.39.3",
-    "react-youtube": "^10.1.0"
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@types/node": "^20",
